# mini_azurestorage_mcp

./: README.md  pyproject.toml  server.py
